# nox

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  NewsPapers.json  Procfile  README.md  db.sqlite3  ecosystem.config.js  go.mod  go.sum  install.sh  newsScraper.py  next.config.js  nox-cli.go  nox.go  noxd.go  package-lock.json  package.json  test.py
api/: index.js  readme.md
archive/: README.md  calendar.ts  index.html  settings.html  weather.ts  wiki.ts
archive/python/: pyproject.toml
archive/python/src/modules/: utility.py
chatbot/: adapter_home.py  talk.py
components/: ImageSlider.jsx  StatusModal.jsx  WorkerSlider.jsx  layout.js
display/: README.md  next.config.js  package-lock.json  package.json  script.js  style.css  test.html
docs/: commit-style.md  design-notes.md  eslint-notes.md  manual-install  manual-installation.md  prisma-notes.md  running-with-pm2.md
extensions/: README.md
ghome/: original_talk_to_ghome.py
nox-cli/: weather.go
noxd/: go.mod  go.sum  noxd.go
pages/: _app.js  index.jsx  muuri.jsx  settings.jsx
prisma/: index.js  schema.prisma  seed.js
python/: README.md
services/: FreyrService.jsx  HassService.jsx  WeatherService.js  WeatherService.jsx
src/: next.config.js
styles/: anemoi.scss  banner.scss  components.scss  freyr.scss  freyrV2.scss  freyrV3.scss  global.scss  layouts.scss  moiraiV2.scss  muuri.module.css  nav.scss  navV2.scss  settings.scss  slider.scss  status.scss  statusV2.scss  utils.scss  weather.scss
typescript/: README.md  package-lock.json  package.json  tsconfig.json
(+191 files in other folders)
